--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -100,4 +100,16 @@
         <item>31</item>
         <item>32</item>
     </string-array>
+
+    <string name="fragment_about_app_feedback">Обратная связь</string>
+    <string name="fragment_about_app_github">Страница на Github</string>
+    <string name="fragment_about_app_version">Версия %s (сборка %s)</string>
+    <string name="fragment_about_app_rate_app">Оценить приложение</string>
+    <string name="fragment_about_app_email_for_feedback">developer.kaczmarek@yandex.ru</string>
+    <string name="fragment_about_app_mail_chooser_title">Выберите приложение для отправки электронного сообщения</string>
+    <string name="fragment_about_app_app_for_intent_not_found">Приложения для обработки действия не найдено</string>
+    <string name="fragment_about_app_app_for_intent_mail_to_not_found">Email для обратной связи скопирован в буфер обмена</string>
+    <string name="fragment_about_app_url_github">https://github.com/developer-kaczmarek/IpCalculator</string>
+    <string name="fragment_about_app_search_in_google_play">market://details?id=%s</string>
+    <string name="fragment_about_app_search_in_browser">https://play.google.com/store/apps/details?id=%s</string>
 </resources>
