refactor: add info page with all links

--- a/app/src/main/res/values-kk/strings.xml
+++ b/app/src/main/res/values-kk/strings.xml
@@ -1,3 +1,4 @@
 <resources>
 
+    <string name="privacy_policy_link">https://github.com/developer-kaczmarek/IpCalculator/wiki/%D2%9A%D2%B1%D0%BF%D0%B8%D1%8F%D0%BB%D1%8B%D0%BB%D1%8B%D2%9B-%D1%81%D0%B0%D1%8F%D1%81%D0%B0%D1%82%D1%8B</string>
 </resources>
