--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,17 @@
     <string name="settings_theme_system">System</string>
     <string name="settings_theme_dark">Dark</string>
     <string name="settings_theme_light">Light</string>
+
+    <string name="info_share_app">Share the app</string>
+    <string name="info_app_rate">Rate the app</string>
+    <string name="info_send_email">Contact the developer</string>
+    <string name="info_privacy_policy">Read privacy policy</string>
+    <string name="info_go_to_github">Open GitHub page</string>
+
+    <string name="developer_email_link" translatable="false">mailto:developer.kaczmarek@gmail.com</string>
+    <string name="github_page_link" translatable="false">https://github.com/developer-kaczmarek/IpCalculator</string>
+    <string name="market_link" translatable="false">market://details?id=io.github.kaczmarek.ipcalculator</string>
+    <string name="web_google_play_link" translatable="false">https://play.google.com/store/apps/details?id=io.github.kaczmarek.ipcalculator</string>
+    <string name="privacy_policy_link">https://github.com/developer-kaczmarek/IpCalculator/wiki/Privacy-policy</string>
+    <string name="share_app_text">Try IP Calculator. Google Play link: https://play.google.com/store/apps/details?id=io.github.kaczmarek.ipcalculator</string>
 </resources>
