--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,15 @@
 <resources>
     <string name="app_name">IP Calculator</string>
 
+    <string name="common_dot" translatable="false">.</string>
+    <string name="common_slash" translatable="false">/</string>
+
     <string name="root_nav_calculator">Calculator</string>
     <string name="root_nav_settings">Settings</string>
     <string name="root_nav_info">Info</string>
+
+    <string name="calculator_calculate_text">Calculate</string>
+    <string name="calculator_share_text">Share</string>
 
     <string name="settings_language">Language</string>
     <string name="settings_locale_ru" translatable="false">Русский</string>
